# learn_linux

./: license  readme.txt  txt
detach_thread/: detach.c  grep_sed.c  no_detach.c
myhello/: hello
myhello/p1/: main.cpp
myhello/p2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
myhello/p3/: CMakeLists.txt  mbuil.sh
myhello/p4/: CMakeLists.txt
myhello/p4/libhello/: CMakeLists.txt  hello.cpp
myhello/p4/src/: CMakeLists.txt
